--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,6 +6,7 @@
 
 /* --------- IMPORTING STYLES --------- */
 @import url("header.css");
+@import url("navigation.css");
 
 /* Resetting styles */
 * {
@@ -18,6 +19,7 @@
 /* Variables */
 :root {
   --primary-color: #003d29;
+  --white-color: #fff;
   --text-color: #231f1e;
   --misty-rose: #f9dcdc;
   --white-smoke: #f5f6f6;
@@ -26,7 +28,24 @@
   --light-cyan: #d2f7ec;
   --margin-top: 80px;
 }
+
+/* --- Utility Classes --- */
 .container {
   width: min(90%, 1400px);
   margin-inline: auto;
+}
+.hide-mobile {
+  display: none;
+  /* display: flex; */
+}
+.display-none {
+  display: none;
+}
+/* h2 {
+  color: var(--text-color);
+} */
+@media screen and (min-width: 750px) {
+  .hide-mobile {
+    display: block;
+  }
 }
