--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -93,7 +93,7 @@ button.categories-btn {
   cursor: pointer;
 }
 
-.navigation-section-categories-holder {
+/* .navigation-section-categories-holder {
   position: absolute;
   width: 100%;
   left: 0;
@@ -104,18 +104,18 @@ button.categories-btn {
   z-index: 20;
   background-color: white;
   top: 110%;
-}
+} */
 
-.navigation-section-categories-item {
+/* .navigation-section-categories-item {
   height: 70px;
   background-color: var(--white-smoke);
   transition: all ease-in-out 250ms;
   border-radius: 6px;
   display: flex;
   align-items: center;
-}
+} */
 
-.navigation-section-categories-item-holder {
+/* .navigation-section-categories-item-holder {
   flex-wrap: wrap;
   gap: 20px;
   flex-shrink: 0;
@@ -123,7 +123,7 @@ button.categories-btn {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-}
+} */
 
 @media screen and (min-width: 750px) {
   .navigation-section-whitebar .logo {
