--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -36,7 +36,7 @@ button.categories-btn {
   gap: 5px;
   outline: none;
   border: none;
-  background-color: transparent;
+  background-color: white;
   cursor: pointer;
 }
 
