--- a/CSS/header.css
+++ b/CSS/header.css
@@ -18,6 +18,48 @@
   display: flex;
   gap: 10px;
 }
+.navigation-section-whitebar {
+  background-color: var(--white-color);
+  height: 80px;
+}
+.navigation-section-whitebar .hide-mobile {
+  display: none;
+}
+.navigation-section-whitebar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+.logo {
+  width: 100px;
+  height: auto;
+}
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+.navigation-section-searchbar-holder {
+  border: #e4e4e4 1px solid;
+  border-radius: 100px;
+  max-width: 400px;
+  height: 40px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+}
+.navigation-section-searchbar-holder input {
+  border: none;
+  outline: none;
+}
+.navigation-section-searchbar-holder input::placeholder {
+  color: #c5c5c5;
+}
+.navigation-section-searchbar-holder i {
+  color: #c5c5c5;
+}
 
 @media screen and (min-width: 750px) {
   .greenbar {
